syntax = "proto3";

package disks;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/disks/protos";

////////////////////////////////////////////////////////////////////////////////

message DeleteDiskRequest {
    reserved 2;

    types.Disk Disk = 1;
    bool Sync = 3;
    // Delete the disk from Blockstore even if it is missing from the Disk
    // Manager database (needed for legacy-created local disks).
    bool DeleteIfNonExistent = 4;
}

message DeleteDiskTaskState {}
